src/Analizador_usql/UsqlParser.java
/* Generated By:JavaCC: Do not edit this line. UsqlParser.java */
package Analizador_usql;

import java.io.FileNotFoundException;
import syntaxtree.*;


public class UsqlParser implements UsqlParserConstants {

  public static void main(String args[]) throws FileNotFoundException{
    UsqlParser parser;
    System.out.println("Reading from standard input. . .");
    parser = new UsqlParser(new java.io.FileInputStream("sample.dat"));
    try {
      INode_usql root = parser.Inicio();
      System.out.println("Parsed successfully.");
    }
    catch (ParseException_usql e) {
      System.out.println(e.getMessage());
      System.out.println("Encountered errors during parse.");
    }
  }

  final public Inicio Inicio() throws ParseException_usql {
  // --- JTB generated node declarations ---
  NodeList n0 = new NodeList();
  listasentencias n1 = null;
    label_1:
    while (true) {
      n1 = listasentencias();
      n0.addNode(n1);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VERDADERO:
      case FALSO:
      case FLOAT:
      case INTEGER:
      case DATE:
      case K_resta:
      case K_not:
      case K_pariz:
      case K_crear:
      case K_usar:
      case K_alterar:
      case K_eliminar:
      case K_insertar:
      case K_actualizar:
      case K_borrar:
      case K_seleccionar:
      case K_otorgar:
      case K_denegar:
      case K_declarar:
      case K_si:
      case K_selecciona:
      case K_para:
      case K_mientras:
      case K_imprimir:
      case K_fecha:
      case K_fecha_hora:
      case K_contar:
      case K_backup:
      case K_restaurar:
      case S_IDENTIFICADOR:
      case CADENA_LITERAL:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    n0.nodes.trimToSize();
    {if (true) return new Inicio(n0);}
    throw new Error("Missing return statement in function");
  }

  final public listasentencias listasentencias() throws ParseException_usql {
  // --- JTB generated node declarations ---
  NodeChoice n0 = null;
  NodeSequence n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeChoice n4 = null;
  crear_base n5 = null;
  crear_tabla n6 = null;
  crear_objeto n7 = null;
  crear_procedimiento n8 = null;
  crear_funcion n9 = null;
  crear_usuario n10 = null;
  NodeSequence n11 = null;
  NodeToken n12 = null;
  Token n13 = null;
  NodeToken n14 = null;
  Token n15 = null;
  NodeToken n16 = null;
  Token n17 = null;
  NodeSequence n18 = null;
  NodeToken n19 = null;
  Token n20 = null;
  NodeChoice n21 = null;
  alterar_tabla n22 = null;
  alterar_objeto n23 = null;
  alterar_usuario n24 = null;
  NodeToken n25 = null;
  Token n26 = null;
  NodeSequence n27 = null;
  NodeToken n28 = null;
  Token n29 = null;
  NodeChoice n30 = null;
  eliminar_usuario n31 = null;
  eliminar_tabla n32 = null;
  eliminar_base n33 = null;
  eliminar_objeto n34 = null;
  NodeToken n35 = null;
  Token n36 = null;
  insertar n37 = null;
  actualizar n38 = null;
  borrar n39 = null;
  seleccionar n40 = null;
  otorgar n41 = null;
  denegar n42 = null;
  Declarar n43 = null;
  asignacion n44 = null;
  Si n45 = null;
  Selecciona n46 = null;
  Para n47 = null;
  Mientras n48 = null;
  Imprimir n49 = null;
  Contar n50 = null;
  Backup_dump n51 = null;
  Restaurar n52 = null;
  NodeSequence n53 = null;
  exp_logica n54 = null;
  NodeToken n55 = null;
  Token n56 = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_crear:
      n1 = new NodeSequence(2);
      n3 = jj_consume_token(K_crear);
      n2 = JTBToolkit.makeNodeToken(n3);
      n1.addNode(n2);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_base:
        n5 = crear_base();
          n4 = new NodeChoice(n5, 0, 6);
        break;
      case K_tabla:
        n6 = crear_tabla();
          n4 = new NodeChoice(n6, 1, 6);
        break;
      case K_objeto:
        n7 = crear_objeto();
          n4 = new NodeChoice(n7, 2, 6);
        break;
      case K_procedimiento:
        n8 = crear_procedimiento();
          n4 = new NodeChoice(n8, 3, 6);
        break;
      case K_funcion:
        n9 = crear_funcion();
          n4 = new NodeChoice(n9, 4, 6);
        break;
      case K_usuario:
        n10 = crear_usuario();
          n4 = new NodeChoice(n10, 5, 6);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException_usql();
      }
      n1.addNode(n4);
      n0 = new NodeChoice(n1, 0, 21);
      break;
    case K_usar:
      n11 = new NodeSequence(3);
      n13 = jj_consume_token(K_usar);
      n12 = JTBToolkit.makeNodeToken(n13);
      n11.addNode(n12);
      n15 = jj_consume_token(S_IDENTIFICADOR);
      n14 = JTBToolkit.makeNodeToken(n15);
      n11.addNode(n14);
      n17 = jj_consume_token(K_pcoma);
      n16 = JTBToolkit.makeNodeToken(n17);
      n11.addNode(n16);
      n0 = new NodeChoice(n11, 1, 21);
      break;
    case K_alterar:
      n18 = new NodeSequence(3);
      n20 = jj_consume_token(K_alterar);
      n19 = JTBToolkit.makeNodeToken(n20);
      n18.addNode(n19);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_tabla:
        n22 = alterar_tabla();
          n21 = new NodeChoice(n22, 0, 3);
        break;
      case K_objeto:
        n23 = alterar_objeto();
          n21 = new NodeChoice(n23, 1, 3);
        break;
      case K_usuario:
        n24 = alterar_usuario();
          n21 = new NodeChoice(n24, 2, 3);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException_usql();
      }
      n18.addNode(n21);
      n26 = jj_consume_token(K_pcoma);
      n25 = JTBToolkit.makeNodeToken(n26);
      n18.addNode(n25);
      n0 = new NodeChoice(n18, 2, 21);
      break;
    case K_eliminar:
      n27 = new NodeSequence(3);
      n29 = jj_consume_token(K_eliminar);
      n28 = JTBToolkit.makeNodeToken(n29);
      n27.addNode(n28);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_usuario:
        n31 = eliminar_usuario();
          n30 = new NodeChoice(n31, 0, 4);
        break;
      case K_tabla:
        n32 = eliminar_tabla();
          n30 = new NodeChoice(n32, 1, 4);
        break;
      case K_base:
        n33 = eliminar_base();
          n30 = new NodeChoice(n33, 2, 4);
        break;
      case K_objeto:
        n34 = eliminar_objeto();
          n30 = new NodeChoice(n34, 3, 4);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException_usql();
      }
      n27.addNode(n30);
      n36 = jj_consume_token(K_pcoma);
      n35 = JTBToolkit.makeNodeToken(n36);
      n27.addNode(n35);
      n0 = new NodeChoice(n27, 3, 21);
      break;
    case K_insertar:
      n37 = insertar();
      n0 = new NodeChoice(n37, 4, 21);
      break;
    case K_actualizar:
      n38 = actualizar();
      n0 = new NodeChoice(n38, 5, 21);
      break;
    case K_borrar:
      n39 = borrar();
      n0 = new NodeChoice(n39, 6, 21);
      break;
    case K_seleccionar:
      n40 = seleccionar();
      n0 = new NodeChoice(n40, 7, 21);
      break;
    case K_otorgar:
      n41 = otorgar();
      n0 = new NodeChoice(n41, 8, 21);
      break;
    case K_denegar:
      n42 = denegar();
      n0 = new NodeChoice(n42, 9, 21);
      break;
    case K_declarar:
      n43 = Declarar();
      n0 = new NodeChoice(n43, 10, 21);
      break;
    default:
      jj_la1[4] = jj_gen;
      if (jj_2_1(6)) {
        n44 = asignacion();
      n0 = new NodeChoice(n44, 11, 21);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_si:
          n45 = Si();
      n0 = new NodeChoice(n45, 12, 21);
          break;
        case K_selecciona:
          n46 = Selecciona();
      n0 = new NodeChoice(n46, 13, 21);
          break;
        case K_para:
          n47 = Para();
      n0 = new NodeChoice(n47, 14, 21);
          break;
        case K_mientras:
          n48 = Mientras();
      n0 = new NodeChoice(n48, 15, 21);
          break;
        case K_imprimir:
          n49 = Imprimir();
      n0 = new NodeChoice(n49, 16, 21);
          break;
        case K_contar:
          n50 = Contar();
      n0 = new NodeChoice(n50, 17, 21);
          break;
        case K_backup:
          n51 = Backup_dump();
      n0 = new NodeChoice(n51, 18, 21);
          break;
        case K_restaurar:
          n52 = Restaurar();
      n0 = new NodeChoice(n52, 19, 21);
          break;
        default:
          jj_la1[5] = jj_gen;
          if (jj_2_2(6)) {
      n53 = new NodeSequence(2);
            n54 = exp_logica();
      n53.addNode(n54);
            n56 = jj_consume_token(K_pcoma);
      n55 = JTBToolkit.makeNodeToken(n56);
      n53.addNode(n55);
      n0 = new NodeChoice(n53, 20, 21);
          } else {
            jj_consume_token(-1);
            throw new ParseException_usql();
          }
        }
      }
    }
    {if (true) return new listasentencias(n0);}
    throw new Error("Missing return statement in function");
  }

  final public eliminar_usuario eliminar_usuario() throws ParseException_usql {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
    n1 = jj_consume_token(K_usuario);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(S_IDENTIFICADOR);
    n2 = JTBToolkit.makeNodeToken(n3);
    {if (true) return new eliminar_usuario(n0, n2);}
    throw new Error("Missing return statement in function");
  }

  final public eliminar_tabla eliminar_tabla() throws ParseException_usql {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
    n1 = jj_consume_token(K_tabla);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(S_IDENTIFICADOR);
    n2 = JTBToolkit.makeNodeToken(n3);
    {if (true) return new eliminar_tabla(n0, n2);}
    throw new Error("Missing return statement in function");
  }

  final public eliminar_base eliminar_base() throws ParseException_usql {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
    n1 = jj_consume_token(K_base);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(S_IDENTIFICADOR);
    n2 = JTBToolkit.makeNodeToken(n3);
    {if (true) return new eliminar_base(n0, n2);}
    throw new Error("Missing return statement in function");
  }

  final public eliminar_objeto eliminar_objeto() throws ParseException_usql {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
    n1 = jj_consume_token(K_objeto);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(S_IDENTIFICADOR);
    n2 = JTBToolkit.makeNodeToken(n3);
    {if (true) return new eliminar_objeto(n0, n2);}
    throw new Error("Missing return statement in function");
  }

  final public alterar_usuario alterar_usuario() throws ParseException_usql {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
  NodeToken n10 = null;
  Token n11 = null;
    n1 = jj_consume_token(K_usuario);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(S_IDENTIFICADOR);
    n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(K_cambiar);
    n4 = JTBToolkit.makeNodeToken(n5);
    n7 = jj_consume_token(K_pw);
    n6 = JTBToolkit.makeNodeToken(n7);
    n9 = jj_consume_token(K_asig);
    n8 = JTBToolkit.makeNodeToken(n9);
    n11 = jj_consume_token(CADENA_LITERAL);
    n10 = JTBToolkit.makeNodeToken(n11);
    {if (true) return new alterar_usuario(n0, n2, n4, n6, n8, n10);}
    throw new Error("Missing return statement in function");
  }

  final public alterar_tabla alterar_tabla() throws ParseException_usql {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeChoice n4 = null;
  agregar_tabla n5 = null;
  quitar n6 = null;
    n1 = jj_consume_token(K_tabla);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(S_IDENTIFICADOR);
    n2 = JTBToolkit.makeNodeToken(n3);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_agregar:
      n5 = agregar_tabla();
        n4 = new NodeChoice(n5, 0, 2);
      break;
    case K_quitar:
      n6 = quitar();
        n4 = new NodeChoice(n6, 1, 2);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException_usql();
    }
    {if (true) return new alterar_tabla(n0, n2, n4);}
    throw new Error("Missing return statement in function");
  }

  final public alterar_objeto alterar_objeto() throws ParseException_usql {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeChoice n4 = null;
  agregar_objeto n5 = null;
  quitar n6 = null;
    n1 = jj_consume_token(K_objeto);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(S_IDENTIFICADOR);
    n2 = JTBToolkit.makeNodeToken(n3);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_agregar:
      n5 = agregar_objeto();
        n4 = new NodeChoice(n5, 0, 2);
      break;
    case K_quitar:
      n6 = quitar();
        n4 = new NodeChoice(n6, 1, 2);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException_usql();
    }
    {if (true) return new alterar_objeto(n0, n2, n4);}
    throw new Error("Missing return statement in function");
  }

  final public agregar_tabla agregar_tabla() throws ParseException_usql {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeSequence n4 = null;
  lista_atributos n5 = null;
  NodeListOptional n6 = new NodeListOptional();
  NodeSequence n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
  lista_atributos n10 = null;
  NodeToken n11 = null;
  Token n12 = null;
    n1 = jj_consume_token(K_agregar);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(K_pariz);
    n2 = JTBToolkit.makeNodeToken(n3);
      n4 = new NodeSequence(1);
    n5 = lista_atributos();
      n4.addNode(n5);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_coma:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_2;
      }
      n7 = new NodeSequence(2);
      n9 = jj_consume_token(K_coma);
      n8 = JTBToolkit.makeNodeToken(n9);
      n7.addNode(n8);
      n10 = lista_atributos();
      n7.addNode(n10);
      n6.addNode(n7);
    }
    n6.nodes.trimToSize();
    n12 = jj_consume_token(K_parder);
    n11 = JTBToolkit.makeNodeToken(n12);
    {if (true) return new agregar_tabla(n0, n2, n4, n6, n11);}
    throw new Error("Missing return statement in function");
  }

  final public quitar quitar() throws ParseException_usql {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeListOptional n4 = new NodeListOptional();
  NodeSequence n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
    n1 = jj_consume_token(K_quitar);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(S_IDENTIFICADOR);
    n2 = JTBToolkit.makeNodeToken(n3);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_coma:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_3;
      }
      n5 = new NodeSequence(2);
      n7 = jj_consume_token(K_coma);
      n6 = JTBToolkit.makeNodeToken(n7);
      n5.addNode(n6);
      n9 = jj_consume_token(S_IDENTIFICADOR);
      n8 = JTBToolkit.makeNodeToken(n9);
      n5.addNode(n8);
      n4.addNode(n5);
    }
    n4.nodes.trimToSize();
    {if (true) return new quitar(n0, n2, n4);}
    throw new Error("Missing return statement in function");
  }

  final public agregar_objeto agregar_objeto() throws ParseException_usql {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeSequence n4 = null;
  lista_componentes n5 = null;
  NodeListOptional n6 = new NodeListOptional();
  NodeSequence n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
  lista_componentes n10 = null;
  NodeToken n11 = null;
  Token n12 = null;
    n1 = jj_consume_token(K_agregar);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(K_pariz);
    n2 = JTBToolkit.makeNodeToken(n3);
      n4 = new NodeSequence(1);
    n5 = lista_componentes();
      n4.addNode(n5);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_coma:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
      n7 = new NodeSequence(2);
      n9 = jj_consume_token(K_coma);
      n8 = JTBToolkit.makeNodeToken(n9);
      n7.addNode(n8);
      n10 = lista_componentes();
      n7.addNode(n10);
      n6.addNode(n7);
    }
    n6.nodes.trimToSize();
    n12 = jj_consume_token(K_parder);
    n11 = JTBToolkit.makeNodeToken(n12);
    {if (true) return new agregar_objeto(n0, n2, n4, n6, n11);}
    throw new Error("Missing return statement in function");
  }

  final public crear_base crear_base() throws ParseException_usql {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
    n1 = jj_consume_token(K_base);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(S_IDENTIFICADOR);
    n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(K_pcoma);
    n4 = JTBToolkit.makeNodeToken(n5);
    {if (true) return new crear_base(n0, n2, n4);}
    throw new Error("Missing return statement in function");
  }
